2011-11-02  Stephen Chenney  <schenney@chromium.org>

        printing layout test failures after r98634
        https://bugs.webkit.org/show_bug.cgi?id=71080

        Reviewed by Kent Tamura

        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::paintPagesWithBoundaries): Added transforms invert the CG Bitmap so the coord system
        matches that for Skia.

2011-11-01  Sam Weinig  <sam@webkit.org>

        Can't complete ChangeLog when using resolve-Changelogs and webkit-tools-completion.sh
        https://bugs.webkit.org/show_bug.cgi?id=71346

        Reviewed by Dan Bernstein.

        * Scripts/webkit-tools-completion.sh:
        Add "-o default" which allows for completing files in addition to the word list.

2011-11-02  Simon Hausmann  <simon.hausmann@nokia.com>

        [Qt][WK2] Add support for touch event testing to WebKitTestRunner
        https://bugs.webkit.org/show_bug.cgi?id=71310

        Reviewed by Kenneth Rohde Christiansen.

        * WebKitTestRunner/DerivedSources.pro: Build system foo to ensure the ENABLE_TOUCH_EVENTS
        define works in EventSendingController.idl
        * WebKitTestRunner/EventSenderProxy.h: Add declarations for Qt implementations of touch
        handlers.
        * WebKitTestRunner/InjectedBundle/Bindings/EventSendingController.idl: Add touch functions
        required by tests.
        * WebKitTestRunner/InjectedBundle/EventSendingController.cpp: Forward touch messages to the
        ui process.
        (WTR::EventSendingController::addTouchPoint):
        (WTR::EventSendingController::updateTouchPoint):
        (WTR::EventSendingController::setTouchModifier):
        (WTR::EventSendingController::touchStart):
        (WTR::EventSendingController::touchMove):
        (WTR::EventSendingController::touchEnd):
        (WTR::EventSendingController::clearTouchPoints):
        (WTR::EventSendingController::releaseTouchPoint):
        * WebKitTestRunner/InjectedBundle/EventSendingController.h: