@@ -51,26 +51,26 @@ class ChromiumMacPortTest(port_testcase.PortTestCase):
 
     def test_versions(self):
         port = chromium_mac.ChromiumMacPort()
-        self.assertTrue(port.name() in ('chromium-mac-leopard', 'chromium-mac-snowleopard', 'chromium-mac-lion', 'chromium-mac-future'))
+        self.assertTrue(port.name() in ('chromium-cg-mac-leopard', 'chromium-cg-mac-snowleopard', 'chromium-cg-mac-lion', 'chromium-cg-mac-future'))
 
-        self.assert_name(None, '10.5.3', 'chromium-mac-leopard')
-        self.assert_name('chromium-mac', '10.5.3', 'chromium-mac-leopard')
-        self.assert_name('chromium-mac-leopard', '10.5.3', 'chromium-mac-leopard')
-        self.assert_name('chromium-mac-leopard', '10.6.3', 'chromium-mac-leopard')
+        self.assert_name(None, '10.5.3', 'chromium-cg-mac-leopard')
+        self.assert_name('chromium-cg-mac', '10.5.3', 'chromium-cg-mac-leopard')
+        self.assert_name('chromium-cg-mac-leopard', '10.5.3', 'chromium-cg-mac-leopard')
+        self.assert_name('chromium-cg-mac-leopard', '10.6.3', 'chromium-cg-mac-leopard')
 
-        self.assert_name(None, '10.6.3', 'chromium-mac-snowleopard')
-        self.assert_name('chromium-mac', '10.6.3', 'chromium-mac-snowleopard')
-        self.assert_name('chromium-mac-snowleopard', '10.5.3', 'chromium-mac-snowleopard')
-        self.assert_name('chromium-mac-snowleopard', '10.6.3', 'chromium-mac-snowleopard')
+        self.assert_name(None, '10.6.3', 'chromium-cg-mac-snowleopard')
+        self.assert_name('chromium-cg-mac', '10.6.3', 'chromium-cg-mac-snowleopard')
+        self.assert_name('chromium-cg-mac-snowleopard', '10.5.3', 'chromium-cg-mac-snowleopard')
+        self.assert_name('chromium-cg-mac-snowleopard', '10.6.3', 'chromium-cg-mac-snowleopard')
 
-        self.assert_name(None, '10.7', 'chromium-mac-lion')
-        self.assert_name(None, '10.7.3', 'chromium-mac-lion')
-        self.assert_name(None, '10.8', 'chromium-mac-future')
-        self.assert_name('chromium-mac', '10.7.3', 'chromium-mac-lion')
-        self.assert_name('chromium-mac-future', '10.4.3', 'chromium-mac-future')
-        self.assert_name('chromium-mac-future', '10.5.3', 'chromium-mac-future')
-        self.assert_name('chromium-mac-future', '10.6.3', 'chromium-mac-future')
-        self.assert_name('chromium-mac-future', '10.7.3', 'chromium-mac-future')
+        self.assert_name(None, '10.7', 'chromium-cg-mac-lion')
+        self.assert_name(None, '10.7.3', 'chromium-cg-mac-lion')
+        self.assert_name(None, '10.8', 'chromium-cg-mac-future')
+        self.assert_name('chromium-cg-mac', '10.7.3', 'chromium-cg-mac-lion')
+        self.assert_name('chromium-cg-mac-future', '10.4.3', 'chromium-cg-mac-future')
+        self.assert_name('chromium-cg-mac-future', '10.5.3', 'chromium-cg-mac-future')
+        self.assert_name('chromium-cg-mac-future', '10.6.3', 'chromium-cg-mac-future')
+        self.assert_name('chromium-cg-mac-future', '10.7.3', 'chromium-cg-mac-future')
 
         self.assertRaises(AssertionError, self.assert_name, None, '10.4.1', 'should-raise-assertion-so-this-value-does-not-matter')
 
@@ -89,9 +89,9 @@ class ChromiumMacPortTest(port_testcase.PortTestCase):
         self.assertEquals('cpu-cg', port.graphics_type())
         port = chromium_mac.ChromiumMacPort(port_name='chromium-mac')
         self.assertEquals('cpu', port.graphics_type())
-        # For now, Mac defaults to cpu graphics type.
+        # For now, Mac defaults to cpu-cg graphics type.
         port = chromium_mac.ChromiumMacPort()
-        self.assertEquals('cpu', port.graphics_type())
+        self.assertEquals('cpu-cg', port.graphics_type())
 
 
 if __name__ == '__main__':
